<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>afirma-core</artifactId>
	<packaging>jar</packaging>
	
	<name>afirma-core</name>
	<description>Core del Cliente @firma</description>
	
	<parent>
		<groupId>es.gob.afirma</groupId>
		<artifactId>afirma-client</artifactId>
		<version>1.10-SNAPSHOT</version>
	</parent>
	
	<dependencies>
		<dependency>
			<groupId>es.gob.afirma.lib</groupId>
			<artifactId>afirma-lib-jmimemagic</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.14.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>9</source>
					<target>9</target>
					<fork>true</fork>
					<debug>false</debug>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>

		</plugins>
	</build>
</project>
